--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/HorariosFunciones.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/HorariosFunciones.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model asp_presentacion.Pages.Ventanas.SalasModel
+@model asp_presentacion.Pages.Ventanas.HorariosFuncionesModel
 @{
     ViewData["Titulo"] = "";
 }
@@ -10,7 +10,7 @@
             @Html.AntiForgeryToken()
 
             <div align="left">
-                <h3>Salas</h3>
+                <h3>Horarios de las funciones</h3>
             </div>
 
             <div ali    gn="left"
@@ -41,64 +41,64 @@
                         Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                       asp-for="@Model.Actual!.IdSalas" />
+                       asp-for="@Model.Actual!.IdHorariosFuncion" />
             }
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                       asp-for="@Model.Actual!.NumeroSala" />
+                       asp-for="@Model.Actual!.Fecha" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.Capacidad" />
+                       asp-for="@Model.Actual!.Hora" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.Estado" />
+                       asp-for="@Model.Actual!.IdSala" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.IdSucursal" />
+                       asp-for="@Model.Actual!.IdPelicula" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
             {
                 <div class="containers_vn panel panel-default">
-                    <h3>Sala</h3>
+                    <h3>Horario de la funcion</h3>
 
                     <div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                NumeroSala
+                                Fecha
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmNumeroSala"
+                                <input id="nmFecha"
                                        class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.NumeroSala" />
+                                       asp-for="@Model.Actual!.Fecha" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Capacidad
+                                Hora
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmCapacidad"
+                                <input id="nmHora"
                                        class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.Capacidad" />
+                                       asp-for="@Model.Actual!.Hora" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Estado
+                                Sala
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmEstado"
+                                <input id="nmSala"
                                        class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.Estado" />
+                                       asp-for="@Model.Actual!.IdSala" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                IdSucursal
+                                Pelicula
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmIdSucursal"
+                                <input id="nmIdPelicula"
                                        class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.IdSucursal" />
+                                       asp-for="@Model.Actual!.IdPelicula" />
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                                 Desea borrar la entidad?
                             </h4>
                             <h6 align="left">
-                                @Model.Actual!.NumeroSala
+                                @Model.Actual!.Fecha
                             </h6>
                             <br />
                             <br />
@@ -152,16 +152,16 @@
                     <table class="tb_data table table-striped table-bordered tablehover">
                         <tr>
                             <th>
-                                NumeroSala
+                                Fecha
                             </th>
                             <th>
-                                Capacidad
+                                Hora
                             </th>
                             <th>
-                                Estado
+                                Sala
                             </th>
                             <th class="cl_hidden">
-                                IdSucursal
+                                Pelicula
                             </th>
                             <th class="cl_actions">
                                 Accion
@@ -173,28 +173,28 @@
                             {
                                 <tr>
                                     <td>
-                                        @elemento.NumeroSala
+                                        @elemento.Fecha
                                     </td>
                                     <td>
-                                        @elemento.Capacidad
+                                        @elemento.Hora
                                     </td> 
                                     <td>
-                                        @elemento.Estado
+                                        @elemento.IdSala
                                     </td> 
                                     <td class="cl_hidden">
-                                         @elemento.IdSucursal
+                                         @elemento.IdPelicula
                                     </td>
                                     <td>
                                         <input type="submit"
                                                value="Modicar"
                                                asp-page-handler="BtModificar"
                                                class="btn btn-secondary"
-                                               asp-route-data="@elemento.IdSalas" />
+                                               asp-route-data="@elemento.IdHorariosFuncion" />
                                         <input type="submit"
                                                value="Borrar"
                                                asp-page-handler="BtBorrarVal"
                                                class="btn btn-secondary"
-                                               asp-route-data="@elemento.IdSalas" />
+                                               asp-route-data="@elemento.IdHorariosFuncion" />
                                     </td>
                                 </tr>
                             }
