--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Equipos.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Equipos.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model asp_presentacion.Pages.Ventanas.SalasModel
+@model asp_presentacion.Pages.Ventanas.EquiposModel
 @{
     ViewData["Titulo"] = "";
 }
@@ -10,7 +10,7 @@
             @Html.AntiForgeryToken()
 
             <div align="left">
-                <h3>Salas</h3>
+                <h3>Equipos</h3>
             </div>
 
             <div ali    gn="left"
@@ -41,14 +41,14 @@
                         Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                       asp-for="@Model.Actual!.IdSalas" />
+                       asp-for="@Model.Actual!.IdEquipos" />
             }
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                       asp-for="@Model.Actual!.NumeroSala" />
+                       asp-for="@Model.Actual!.Tipo" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.Capacidad" />
+                       asp-for="@Model.Actual!.Marca" />
                 <input type="hidden"
                        asp-for="@Model.Actual!.Estado" />
                 <input type="hidden"
@@ -58,27 +58,27 @@
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
             {
                 <div class="containers_vn panel panel-default">
-                    <h3>Sala</h3>
+                    <h3>Equipo</h3>
 
                     <div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                NumeroSala
+                                Tipo
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmNumeroSala"
+                                <input id="nmTipo"
                                        class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.NumeroSala" />
+                                       asp-for="@Model.Actual!.Tipo" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Capacidad
+                                Marca
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmCapacidad"
+                                <input id="nmMarca"
                                        class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.Capacidad" />
+                                       asp-for="@Model.Actual!.Marca" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -91,12 +91,12 @@
                                        asp-for="@Model.Actual!.Estado" />
                             </div>
                         </div>
-                        <div class="form-group">
+                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                IdSucursal
+                                Sucursal
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmIdSucursal"
+                                <input id="nmSucursal"
                                        class="cts_forms form-control"
                                        asp-for="@Model.Actual!.IdSucursal" />
                             </div>
@@ -125,7 +125,7 @@
                                 Desea borrar la entidad?
                             </h4>
                             <h6 align="left">
-                                @Model.Actual!.NumeroSala
+                                @Model.Actual!.Tipo
                             </h6>
                             <br />
                             <br />
@@ -145,6 +145,11 @@
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
                  Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
+                <input id="flMarca"
+                       class="cts_forms form-control"
+                       asp-for="@Model.Filtro!.Marca"
+                       placeholder="Marca" />
+                <br />
 
                 <div class="containers_vn panel panel-default">
 
@@ -152,16 +157,16 @@
                     <table class="tb_data table table-striped table-bordered tablehover">
                         <tr>
                             <th>
-                                NumeroSala
+                                Tipo
                             </th>
                             <th>
-                                Capacidad
+                                Marca
                             </th>
                             <th>
                                 Estado
                             </th>
                             <th class="cl_hidden">
-                                IdSucursal
+                                Sucursal
                             </th>
                             <th class="cl_actions">
                                 Accion
@@ -173,28 +178,28 @@
                             {
                                 <tr>
                                     <td>
-                                        @elemento.NumeroSala
+                                        @elemento.Tipo
                                     </td>
                                     <td>
-                                        @elemento.Capacidad
+                                        @elemento.Marca
                                     </td> 
                                     <td>
                                         @elemento.Estado
                                     </td> 
                                     <td class="cl_hidden">
-                                         @elemento.IdSucursal
+                                        @elemento.IdSucursal
                                     </td>
                                     <td>
                                         <input type="submit"
                                                value="Modicar"
                                                asp-page-handler="BtModificar"
                                                class="btn btn-secondary"
-                                               asp-route-data="@elemento.IdSalas" />
+                                               asp-route-data="@elemento.IdEquipos" />
                                         <input type="submit"
                                                value="Borrar"
                                                asp-page-handler="BtBorrarVal"
                                                class="btn btn-secondary"
-                                               asp-route-data="@elemento.IdSalas" />
+                                               asp-route-data="@elemento.IdEquipos" />
                                     </td>
                                 </tr>
                             }
@@ -204,4 +209,4 @@
             }
         </form>
     </div>
-</center>
+</center> 
